--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+Version 82:
+
+* Finish things out, thru season23
+
+Version 79:
+
+* Fill out thru season11
+
 Version 69:
 
 * Add season0 thru season4 revamped from zero
