update changelog for v83

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
+Version 83:
+
+* Finish things through season 23
+
 Version 82:
 
-* Finish things out, thru season23
+* Fill out thru season21
 
 Version 79:
 
